fix: fix problem with sliding images in slider on firefox

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .scrollbar-gutter-stable {
+    scrollbar-gutter: stable;
+  }
+}
